gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/systemvariables_void_init.d
version https://git-lfs.github.com/spec/v1
oid sha256:6f0bc321263049aeb6a4cea4cb8b9250ed9451da1a0b63e665ac6750c25618cc
size 613
